[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-incident-responder"
version = "0.1.0"
authors = [
  { name="Pruthviraj Vinod Phuse", email="phusepruthvi@gmail.com" },
]
description = "A cloud systems incident responder environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-multipart",
    "requests"
]

[project.scripts]
server = "server.app:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
